Oops...fixed .def_left and .def_right text-align settings.

--- a/install/web_includes/schemafw.css
+++ b/install/web_includes/schemafw.css
@@ -92,8 +92,8 @@ div.message
     z-index:101;
 }
 
-.def_left   { text-align:right; }
-.def_right  { text-align:left; }
+.def_left   { text-align:left; }
+.def_right  { text-align:right; }
 .def_center { text-align:center; }
 
 
